--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "backend do projeto 3d",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "test",
     "start": "node src/index.js",
